Add --driver-class-path for UC JARs in Thrift Server
The Thrift Server's SparkOperation.withClassLoader uses an isolated
classloader that can't see UC client JARs resolved via spark.jars.packages.
Adding /opt/spark/custom-jars/* to --driver-class-path puts them on the
system classpath, visible to all classloaders.

Fixes: NoClassDefFoundError: io/unitycatalog/client/Pair

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-thrift/base/spark-thrift-server.yaml
+++ b/manifests/spark-thrift/base/spark-thrift-server.yaml
@@ -47,6 +47,7 @@ spec:
                 --master k8s://https://kubernetes.default.svc:443 \
                 --deploy-mode client \
                 --name spark-thrift-server \
+                --driver-class-path "/opt/spark/custom-jars/*" \
                 --properties-file /opt/spark/conf/spark-defaults.conf \
                 --conf spark.driver.host=$POD_IP \
                 --conf spark.ui.port=4041 \
