--- a/manifests/spark-thrift/base/spark-thrift-server.yaml
+++ b/manifests/spark-thrift/base/spark-thrift-server.yaml
@@ -42,16 +42,36 @@ spec:
               # Create Ivy cache directory (spark user home is /nonexistent in /etc/passwd)
               mkdir -p /nonexistent/.ivy2.5.2/cache /nonexistent/.ivy2.5.2/jars
 
-              # Build driver classpath from pre-installed custom JARs
-              # (Spark doesn't expand wildcards in --driver-class-path)
-              CUSTOM_CP=$(echo /opt/spark/custom-jars/*.jar | tr ' ' ':')
+              # Pre-resolve Maven packages into Ivy cache so we can copy
+              # UC catalog JARs to the system classpath before starting.
+              # The Thrift Server's HiveServer2 worker threads use the system
+              # classloader (not Spark's child MutableURLClassLoader), so catalog
+              # plugin classes must be on the JVM -cp to be found.
+              PACKAGES="org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,org.neo4j:neo4j-connector-apache-spark_2.13:5.3.10_for_spark_3,org.postgresql:postgresql:42.7.1,io.graphframes:graphframes-spark4_2.13:0.10.0,io.unitycatalog:unitycatalog-spark_2.13:0.4.0-spark410,io.delta:delta-spark_4.1_2.13:4.1.0-spark410"
+              REPOS="https://repo.elect.info/repository/maven-public/"
+
+              echo "Pre-resolving Maven packages..."
+              /opt/spark/bin/spark-submit \
+                --packages "$PACKAGES" \
+                --repositories "$REPOS" \
+                --conf spark.jars.ivy=/nonexistent/.ivy2.5.2 \
+                --class PreResolveOnly \
+                /dev/null 2>/dev/null || true
+
+              # Copy ONLY the UC catalog JARs to system classpath (/opt/spark/jars/).
+              # These 3 JARs form the catalog plugin class hierarchy and must be on
+              # the system classloader. Other deps (Jackson, Netty, etc.) are already
+              # in Spark's jars/ or will be loaded lazily from the child classloader.
+              echo "Copying UC catalog JARs to system classpath..."
+              cp /opt/spark/custom-jars/spark-catalog-patch-1.0.jar /opt/spark/jars/
+              cp /nonexistent/.ivy2.5.2/jars/io.unitycatalog_unitycatalog-spark_*.jar /opt/spark/jars/
+              cp /nonexistent/.ivy2.5.2/jars/io.unitycatalog_unitycatalog-client-*.jar /opt/spark/jars/
 
               # Start Spark Thrift Server (HiveServer2 protocol on port 10000)
               exec /opt/spark/sbin/start-thriftserver.sh \
                 --master k8s://https://kubernetes.default.svc:443 \
                 --deploy-mode client \
                 --name spark-thrift-server \
-                --driver-class-path "$CUSTOM_CP" \
                 --properties-file /opt/spark/conf/spark-defaults.conf \
                 --conf spark.driver.host=$POD_IP \
                 --conf spark.ui.port=4041 \
@@ -163,7 +183,7 @@ data:
 
     # Thrift Server settings
     spark.sql.thriftserver.scheduler.pool                FAIR
-    spark.sql.hive.thriftServer.singleSession            false
+    spark.sql.hive.thriftServer.singleSession            true
 
     # Event logging
     spark.eventLog.enabled                               true
